namespace AuctionManagement.WebAPI.Enums {
    public enum Status {
        Available,
        Sold
    }
}
