@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho
left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Item {
    id
    name
    price
    status
    idCategoria
}

class Category {
    id
    description
}

enum Status {
    available
    sold
}

class Sale {
    id
    date
    salePrice
    itemId
}

class AuctionBid {
    id
    itemId
    userId
    auctionId
    price
}

class AuctionItem {
    itemId
    price
    status
}

class AuctionUser {
    id
    name
    nif
    bidsList
}

class Auction {
    id
    itemId
    initialDate
    finalDate
    bidsList
    finalPrice
}

Item "*" --- "1" Category: cataloged as >
Item "1" ---- "1" Sale: is in >
Item "1" -- "1.*" Status : has >
AuctionUser "1" -- "1.*" AuctionBid : has >
AuctionBid "1" --- "1" Sale: generates >
AuctionBid "1" --- "1" AuctionItem: has >
Auction "1" --- "1.*" AuctionBid: has >


@enduml